iac/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ad-management
  labels:
    name: ad-management
